# MulesoftArchitecture

./: .gitignore  CLAUDE.md  README.md
code/: README.md
code/policies/payload-capture-wasm/: .gitignore  Cargo.toml  README.md  deploy-policy.ps1  policy-manifest.yaml
code/policies/payload-capture-wasm/src/: lib.rs
code/policies/payload-capture-wasm/tests/: integration-test-plan.md
code/services/redis-sync-daemon/: Dockerfile  README.md  go.mod
code/services/redis-sync-daemon/cmd/redis-sync-daemon/: main.go
code/services/redis-sync-daemon/configs/: example.yaml
code/services/redis-sync-daemon/internal/config/: config.go
code/services/redis-sync-daemon/internal/health/: health.go
code/services/redis-sync-daemon/internal/metrics/: metrics.go
docs/: 01-api-gateway-architecture.md  02-policies.md  03-identity.md  04-cicd.md  05-observability.md  06-azure-private-space.md  07-data-protection.md  08-flex-gateway.md  09-onprem-install.md  10-redis-cache.md  11-azure-service-bus-integration.md  12-service-bus-vs-biztalk.md  13-azure-functions.md  14-redis-assumptions.md  15-orchestration.md  16-consulting-estimate.md  17-engagement-models.md  18-team-roles-and-skills.md  19-pricing-model.md  20-raci-matrix.md  21-okta-integration.md  22-redis-cross-dc-sync.md
presentations/: MuleSoft-APIGateway-Architecture.pptx  MuleSoft-APIGateway-OnPrem.pptx  build_onprem_pptx.py  build_pptx.py
presentations/diagrams/: mulesoft_architecture.py  onprem_architecture.py
pricing/: build_pricing_template.py  pricing-template.xlsx
(+6 files in other folders)
