[package]
name = "payload-capture-wasm"
version = "0.1.0"
edition = "2021"
description = "Omni Gateway custom WASM policy: capture every API call payload + headers to Azure Service Bus"
license = "MIT"

[lib]
crate-type = ["cdylib"]   # required for WASM target

[dependencies]
# proxy-wasm SDK — Envoy filter API. Pin to a known-good version that
# matches the Omni Gateway runtime. Bump only when Omni release notes
# announce a compatible newer ABI.
proxy-wasm = "0.2.2"

# JSON serialization for the CloudEvents envelope + policy config parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Lightweight logging facade (proxy-wasm provides the backend)
log = "0.4"

[profile.release]
# Small + fast WASM binary
opt-level = "z"           # optimize for size (z = aggressive)
lto = true                # link-time optimization
codegen-units = 1         # better optimization at the cost of build time
strip = true              # strip symbols
panic = "abort"           # smaller binary; we don't unwind in WASM

# Optional: dev profile for faster iteration during local testing
[profile.dev]
opt-level = 1
